--- a/src/style.scss
+++ b/src/style.scss
@@ -17,6 +17,7 @@ body {
   height: 16px;
   border-radius: 50%;
   font-size: 12px;
+  font-weight: 400;
   display: flex;
   align-items: center;
   justify-content: center;
